[gd_scene load_steps=8 format=3 uid="uid://donu4757x48qs"]

[ext_resource type="Script" path="res://scenes/space/local/space_local_system.gd" id="1_tlx4b"]
[ext_resource type="Script" path="res://util/camera.gd" id="2_yq2a3"]
[ext_resource type="Shader" uid="uid://17p84k6mfsml" path="res://scenes/space/local/solar_system_parent_star.tres" id="3_jyyok"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oyqaa"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_jyyok")
shader_parameter/color = Color(0, 0.048079, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_jjmm3"]
material = SubResource("ShaderMaterial_oyqaa")
radius = 2.5
height = 5.0

[sub_resource type="Gradient" id="Gradient_ccqfk"]
interpolation_mode = 2
colors = PackedColorArray(1, 1, 1, 0.352941, 0, 0, 0, 0.301961)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t1clw"]
gradient = SubResource("Gradient_ccqfk")
width = 8
height = 8
fill = 1
fill_from = Vector2(0.517094, 0.517094)
fill_to = Vector2(0.92735, 0.918803)

[node name="SpaceLocalSystem" type="Node3D"]
process_thread_group = 1
process_thread_group_order = 0
process_thread_messages = 0
script = ExtResource("1_tlx4b")

[node name="Camera3D" type="Camera3D" parent="."]
near = 0.009
far = 259999.0
script = ExtResource("2_yq2a3")

[node name="SolarSystemContainer" type="Node3D" parent="."]

[node name="OmniLight3D" type="OmniLight3D" parent="SolarSystemContainer"]
layers = 4
light_cull_mask = 4293918724
omni_range = 1e+07
omni_attenuation = 0.000345266

[node name="Planets" type="Node3D" parent="SolarSystemContainer"]
unique_name_in_owner = true

[node name="SolarSystemParentStar" type="MeshInstance3D" parent="SolarSystemContainer"]
mesh = SubResource("SphereMesh_jjmm3")
skeleton = NodePath("../..")

[node name="RingParticles" type="Node3D" parent="SolarSystemContainer"]
unique_name_in_owner = true

[node name="RingParticle" type="Sprite3D" parent="SolarSystemContainer/RingParticles"]
unique_name_in_owner = true
visible = false
pixel_size = 0.0001
billboard = 1
texture = SubResource("GradientTexture2D_t1clw")
